--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mini Site Luxe</title>
+  <title>Maison Élégance</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,21 +12,41 @@
       background-color: #fff;
       color: #222;
     }
+
     header {
       background-color: #000;
       color: #fff;
       text-align: center;
       padding: 2rem 1rem;
     }
+
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 2.5rem;
       margin: 0;
     }
+
+    nav {
+      margin-top: 1rem;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #d4af37;
+    }
+
     section {
       text-align: center;
       padding: 3rem 1rem;
     }
+
     .cta {
       margin-top: 2rem;
       display: inline-block;
@@ -38,9 +58,11 @@
       font-weight: bold;
       transition: 0.3s ease;
     }
+
     .cta:hover {
       background-color: #c89e30;
     }
+
     .hero-image {
       width: 100%;
       max-width: 600px;
@@ -53,13 +75,19 @@
   <header>
     <h1>Maison Élégance</h1>
     <p>Découvrez l'essence du luxe français</p>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="parfums.html">Parfums</a>
+      <a href="mode.html">Mode</a>
+      <a href="apropos.html">À propos</a>
+    </nav>
   </header>
 
   <section>
     <h2 style="font-family: 'Playfair Display', serif; font-size: 2rem;">Parfum • Mode • Raffinement</h2>
     <img src="https://images.unsplash.com/photo-1526045478516-99145907023c?auto=format&fit=crop&w=900&q=80" alt="Luxe" class="hero-image" />
     <p style="margin-top: 1.5rem; font-size: 1.1rem;">Un univers de sophistication et d’élégance à portée de main.</p>
-    <a class="cta" href="#">Découvrir</a>
+    <a class="cta" href="parfums.html">Découvrir</a>
   </section>
 </body>
 </html>
