--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     section {
       text-align: center;
-      padding: 3rem 1rem;
+      padding: 4rem 2rem;
       border-bottom: 1px solid #eee;
     }
 
@@ -56,6 +56,13 @@
       font-family: 'Playfair Display', serif;
       font-size: 2rem;
       margin-bottom: 1rem;
+    }
+
+    section p {
+      max-width: 600px;
+      margin: 0 auto;
+      font-size: 1.1rem;
+      line-height: 1.6;
     }
 
     .cta {
@@ -73,13 +80,6 @@
     .cta:hover {
       background-color: #c89e30;
     }
-
-    .hero-image {
-      width: 100%;
-      max-width: 600px;
-      margin-top: 2rem;
-      border-radius: 15px;
-    }
   </style>
 </head>
 <body>
@@ -96,27 +96,23 @@
 
   <section id="accueil">
     <h2>Parfum • Mode • Raffinement</h2>
-    <img src="https://images.unsplash.com/photo-1526045478516-99145907023c?auto=format&fit=crop&w=900&q=80" alt="Luxe" class="hero-image" />
-    <p style="margin-top: 1.5rem; font-size: 1.1rem;">Un univers de sophistication et d’élégance à portée de main.</p>
+    <p>Un univers de sophistication et d’élégance à portée de main.</p>
     <a class="cta" href="#parfums">Découvrir</a>
   </section>
 
   <section id="parfums">
     <h2>Nos Parfums</h2>
-    <p>Une collection exclusive d’essences rares et précieuses, capturant l’âme du raffinement français.</p>
-    <img src="https://images.unsplash.com/photo-1614032685203-3fbe5e2b3a84?auto=format&fit=crop&w=900&q=80" alt="Parfum" class="hero-image" />
+    <p>Une collection exclusive d’essences rares, conçues pour capturer l’émotion pure. Chaque parfum incarne un moment, un souvenir, une signature.</p>
   </section>
 
   <section id="mode">
     <h2>Mode & Élégance</h2>
-    <p>Des lignes pures, des coupes impeccables : notre vision du style, entre tradition et modernité.</p>
-    <img src="https://images.unsplash.com/photo-1618354691215-998c96ddcc45?auto=format&fit=crop&w=900&q=80" alt="Mode" class="hero-image" />
+    <p>Des silhouettes épurées, des matières nobles, une vision intemporelle du style. Notre collection célèbre la beauté du détail et la force du minimalisme.</p>
   </section>
 
   <section id="apropos">
-    <h2>À propos de nous</h2>
-    <p>Maison Élégance incarne l’héritage du luxe à la française. Depuis plus de 20 ans, nous célébrons le savoir-faire, la passion et l’authenticité.</p>
-    <img src="https://images.unsplash.com/photo-1532634726-8b9fb99825c7?auto=format&fit=crop&w=900&q=80" alt="Élégance" class="hero-image" />
+    <h2>À propos</h2>
+    <p>Depuis plus de deux décennies, Maison Élégance incarne l’art de vivre à la française. Entre tradition et modernité, nous façonnons un luxe sincère, discret et affirmé.</p>
   </section>
 </body>
 </html>
