--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <section id="accueil">
     <h2>Parfum • Mode • Raffinement</h2>
     <p>Un univers de sophistication et d’élégance à portée de main.</p>
-    <a class="cta" href="#parfums">Découvrir</a>
+    <a class="cta" href="#" onclick="alert('Bienvenue dans l’univers Maison Élégance – Explorez nos créations avec style.'); return false;">Découvrir</a>
   </section>
 
   <section id="parfums">
